<resources>
    <string name="app_name">Leafpad</string>
    <string name="title_activity_note_edit">Edit Note</string>
    <string name="action_add_note">Add Note</string>
    <string name="action_edit_note">Edit Note</string>
    <string name="action_share_note">Share note</string>
    <string name="action_share_title">Title</string>
    <string name="action_share_body">Note</string>
    <string name="note_shared">Note shared</string>
    <string name="action_remove">Remove note</string>
    <string name="action_fab_note">Make a note</string>
    <string name="add_shortcut_short_label">Write down new</string>
    <string name="title_hint">Title</string>
    <string name="body_hint">Note</string>
    <string name="contentDescription">Add new Note</string>
    <string name="imported">Note was send to leafpad</string>
    <string name="edited_text">Edited at</string>
    <string name="new_note">new Note</string>
    <string name="satisfied">Enjoying leafpad?</string>
    <string name="rate_the_app">Leave a Play Store review?</string>
    <string name="created_txt">created at</string>
    <string name="remove_dialog_title">Are you sure?</string>
    <string name="remove_dailog_message">This note will be permanently deleted. Afterwards it cannot be restored.</string>
    <string name="remove_dialog_abort">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="general_preference">General settings</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="lightmode_preference_option_value" translatable="false">lightmode</string>
    <string name="darkmode_preference_option_value" translatable="false">darkmode</string>
    <string name="system_preference_option_value" translatable="false">system</string>
    <string name="theme_preference">Theme</string>
    <string name="darkmode_preference" translatable="false">darkmode</string>
    <string name="lightmode_preference" translatable="false">lightmode</string>
    <string name="system_preference" translatable="false">system</string>
    <string name="lightmode_preference_key">lightmode</string>
    <string name="darkmode_preference_key">darkmode</string>
    <string name="system_preference_key">follow system (standard)</string>
    <string name="theme_summary">Toggle between dark and light theme</string>
    <string name="notification_of_change">Notification of changes</string>
    <string name="notification_of_change_description">Notify about changes in notes</string>
    <string name="unsaved_changes_title">Unsaved changes</string>
    <string name="unsaved_changes_message">Your note has changed. Do you want to save or discard the changes?</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard">Discard</string>
    <string name="about">About</string>
    <string name="about_the_app">About the App</string>
    <string name="tell_about">What I want to tell you about Leafpad</string>
    <string name="version">Version</string>
    <string name="change">Version</string>
    <string name="what_is_leafpad">Leafpad is a simple app for taking notes.</string>
    <string name="leafpad_work">Leafpad saves all data locally on your smartphone. The notes or metadata such as date and time are not stored in any cloud and are not shared with anyone. No text analysis is carried out either. The notes belong to you. You decide what you do with them.</string>
    <string name="rev20_12">And I saw the dead, the great and the small, standing before the throne; and books were opened: and another book was opened, which is the book of life: and the dead were judged out of the things which were written in the books, according to their works. Revelation 20:12</string>
    <string name="statement">We write down shopping lists, notes for conversations, packing lists for vacations or friends\' birthdays. These are all good things so that we don\'t forget them. It\'s very similar with God, he writes down our good and bad deeds and saves them. God is above everything and simply knows everything. God loves people and wants to have fellowship with them. But this is only possible if we are seen by God as blameless. Through faith in Jesus Christ, our bad deeds (our guilt) are wiped out before God. Jesus Christ atoned for our guilt on the cross of Calvary. Every person who accepts this is entered in the book of life forever. Are you registered in the book of life?</string>
    <string name="thanks">Thank you Stefan, Stefan, Manuel, Falk, Stephanie and Emil for your ideas and testing the app.</string>
    <string name="its_opensource">Leafpad is OpenSource and its free</string>
    <string name="find_code_on_github">GitHub</string>
    <string name="find_code_on_github_summary">View the code and report issues in the repository.</string>
    <string name="title_licence">Licences</string>
    <string name="licence">Open source licenses</string>
    <string name="share_note">Share Note?</string>
    <string name="note_will_be_saved_first">Note will be saved first</string>
    <string name="action_save">save note</string>
    <string name="action_note_saved">saved</string>
    <string name="participate">Participate or Contribute</string>
    <string name="translate">Translate the app on Weblate</string>
    <string name="translation_help">Help translate the app on Weblate.</string>
    <string name="hide_note">Make the note invisible</string>
    <string name="show_note">Make the note visible</string>
    <string name="show_hidden">Show hidden notes</string>
    <string name="hide_hidden">Hide hidden notes</string>
    <string name="note_is_recipe">Note is a recipe</string>
    <string name="note_is_no_recipe">Note is no recipe</string>
    <string name="category">Category</string>
    <string name="save_notes_title">Backup</string>
    <string name="save">Save all notes as zipb container with json</string>
    <string name="restore_notes_title">Restore</string>
    <string name="restore">Restore all notes from an zip file</string>
    <string name="showRestoreConfirmation">Restore?</string>
    <string name="showRestoreConfirmationMessage">All current notes will be replaced by the backup. Continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="showDeleteConfirmation">Delete notes?</string>
    <string name="showDeleteConfirmationMessage">All notes will be permanently deleted. Continue?</string>
    <string name="importError">Error when importing notes.</string>
    <string name="fileOpeningError">Error when opening the file.</string>
    <string name="invalidFile">Invalid backup file. The import was cancelled.</string>
    <string name="backupIsrunning">Backup is running</string>
    <string name="backupfinish">Backup finished</string>
    <plurals name="notes_imported">
        <item quantity="one">%1$d note imported</item>
        <item quantity="other">%1$d notes imported</item>
    </plurals>
    <plurals name="notes_exported">
        <item quantity="one">%d note exported</item>
        <item quantity="other">%d notes exported</item>
    </plurals>
    <string name="toggle">change View</string>
    <string name="item_menu_description">Menu for item actions</string>
    <string name="empty_list">No notes available in the list</string>
    <string name="not_initialized">Leafpad not initialized yet!</string>
    <string name="search">search notes</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="no_search_results">Nothing found</string>
    <string name="startIconDescription">A search field</string>
    <string name="close_release_note">Close Button</string>
    <string name="set">It is a recipe</string>
    <string name="setCategory">Set Category</string>
    <string name="country_title_albanian">Albanian</string>
    <string name="country_title_translator_albanian" translatable="false">Besnik Bleta(@Besnik_b)</string>
    <string name="country_title_arabic">Arabic</string>
    <string name="country_title_translator_arabic" translatable="false">Asaad Zein(@asaadzx)</string>
    <string name="country_title_catalan">Catalan</string>
    <string name="country_title_translator_catalan" translatable="false">Adolfo Jayme Barrientos(@Fito), Toni Gurguí(@tgurgui)</string>
    <string name="country_title_chinese_simplified_han_script">Chinese (Simplified Han script)</string>
    <string name="country_title_translator_chinese_simplified_han_script" translatable="false">雲の中を漂う船(@KumoNoFune), imcc(@imcc)</string>
    <string name="country_title_chinese_traditional_han_script">Chinese (Traditional Han script)</string>
    <string name="country_title_translator_chinese_traditional_han_script" translatable="false">imcc(@imcc)</string>
    <string name="country_title_czech">Czech</string>
    <string name="country_title_translator_czech" translatable="false">MessingWithComputers(@MessingWithComputers)</string>
    <string name="country_title_danish">Danish</string>
    <string name="country_title_translator_danish" translatable="false">Isak(@Isak)</string>
    <string name="country_title_dutch">Dutch</string>
    <string name="country_title_translator_dutch" translatable="false">Bert Aarts(@OSSRocks)</string>
    <string name="country_title_english">English</string>
    <string name="country_title_translator_english" translatable="false">Yurt Page(@yurtpage), zergio inzunza(@n1kf4m3l), Santiago Centeno(@Java16)</string>
    <string name="country_title_estonian">Estonian</string>
    <string name="country_title_translator_estonian" translatable="false">Priit Jõerüüt(@jrthwlate)</string>
    <string name="country_title_french">French</string>
    <string name="country_title_translator_french" translatable="false">Leonart(@Leonart), Omgeta(@Omgeta), michte(@michte), David D.(@Dadu042)</string>
    <string name="country_title_german">German</string>
    <string name="country_title_translator_german" translatable="false">Blubberland(@Blubberland), Maximilian Hüttner(@MaxHue)</string>
    <string name="country_title_gothic">Gothic</string>
    <string name="country_title_translator_gothic" translatable="false">Roel v(@Hrothilas)</string>
    <string name="country_title_greek">Greek</string>
    <string name="country_title_translator_greek" translatable="false">Jim Kats(@jimkats1)</string>
    <string name="country_title_hindi">Hindi</string>
    <string name="country_title_translator_hindi" translatable="false">Harshit Sethi(@hstsethi)</string>
    <string name="country_title_hindi_latin">Indian (Latin scripture)</string>
    <string name="country_title_hindi_latin_script">Hindi (Latin script)</string>
    <string name="country_title_translator_hindi_latin_script" translatable="false">Saurmanđal(@Saurmandal)</string>
    <string name="country_title_indonesian">Indonesian</string>
    <string name="country_title_translator_indonesian" translatable="false">Arif Budiman(@arifpedia), toposets(@toposets), Reza Almanda(@rezaalmanda), Antx(@antx)</string>
    <string name="country_title_italian">Italian</string>
    <string name="country_title_translator_italian" translatable="false">pastic cerre(@pasti), Akiakizero(@Akiakizero), Davide Secco(@davidesecco)</string>
    <string name="country_title_polish">Polish</string>
    <string name="country_title_translator_polish" translatable="false">Matthaiks(@Kityn), Krzysztof Kolumb(@Kolumb76), Eryk Michalak(@gnu-ewm), OskarO 140(@oskarek.o140)</string>
    <string name="country_title_portuguese">Portuguese</string>
    <string name="country_title_translator_portuguese" translatable="false">Lucas Alves Rego(@devlulcas), Ettlu selva rula(@Ttormor)</string>
    <string name="country_title_russian">Russian</string>
</resources>