<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.git.amarradi.MainActivity">

    <item
        android:id="@+id/action_recipe"
        android:icon="@drawable/btn_chefhat"
        android:title="@string/note_is_recipe"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_hide"
        android:icon="@drawable/btn_hide"
        android:title="@string/hide_note"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share_note"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/btn_save_note"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom" />
</menu>
