<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:fitsSystemWindows="true">

    <!-- Toolbar oben -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:fitsSystemWindows="true"/>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Scrollbarer Inhalt -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_about">

            <!-- Version -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/large_icon_size"
                        android:layout_height="@dimen/large_icon_size"
                        android:layout_margin="@dimen/image_about_section_margin"
                        android:src="@drawable/ic_olive_leaf"
                        android:contentDescription="@null" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_about_section_margin"
                        android:textAppearance="@style/TextAppearance.MyAboutPageTitle" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Bibelvers -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/large_icon_size"
                        android:layout_height="@dimen/large_icon_size"
                        android:layout_margin="@dimen/image_about_section_margin"
                        android:src="@drawable/ic_about_book"
                        android:contentDescription="@null" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_biblevers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_about_section_margin"
                        android:textAppearance="@style/TextAppearance.MyAboutPageBibleVerse"
                        android:text="@string/rev20_12" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Statement -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/large_icon_size"
                        android:layout_height="@dimen/large_icon_size"
                        android:layout_margin="@dimen/image_about_section_margin"
                        android:src="@drawable/ic_about_article"
                        android:contentDescription="@null" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_statement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_about_section_margin"
                        android:textAppearance="@style/TextAppearance.MyAboutPage"
                        android:text="@string/what_is_leafpad" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Danke -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/large_icon_size"
                        android:layout_height="@dimen/large_icon_size"
                        android:layout_margin="@dimen/image_about_section_margin"
                        android:src="@drawable/ic_olive_leaf"
                        android:contentDescription="@null" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/thank_you"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_about_section_margin"
                        android:textAppearance="@style/TextAppearance.MyAboutPage"
                        android:text="@string/thanks" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Danke für Weblate -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/large_icon_size"
                        android:layout_height="@dimen/large_icon_size"
                        android:layout_margin="@dimen/image_about_section_margin"
                        android:src="@drawable/ic_translation"
                        android:contentDescription="@null" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/thank_you_for_weblate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_about_section_margin"
                        android:textAppearance="@style/TextAppearance.MyAboutPage"
                        android:text="@string/tell_about" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- NEU: Bewerten -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/large_icon_size"
                        android:layout_height="@dimen/large_icon_size"
                        android:layout_margin="@dimen/image_about_section_margin"
                        android:src="@drawable/ic_about_book"
                        android:contentDescription="@null" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_about_section_margin"
                        android:textAppearance="@style/TextAppearance.MyAboutPage"
                        android:text="@string/thanks" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- NEU: GitHub -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/large_icon_size"
                        android:layout_height="@dimen/large_icon_size"
                        android:layout_margin="@dimen/image_about_section_margin"
                        android:src="@drawable/ic_github_logo"
                        android:contentDescription="@null" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_about_section_margin"
                        android:textAppearance="@style/TextAppearance.MyAboutPage"
                        android:text="@string/thanks" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- NEU: Weblate -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_weblate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_about"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/large_icon_size"
                        android:layout_height="@dimen/large_icon_size"
                        android:layout_margin="@dimen/image_about_section_margin"
                        android:src="@drawable/ic_translation"
                        android:contentDescription="@null" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_weblate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_about_section_margin"
                        android:textAppearance="@style/TextAppearance.MyAboutPage"
                        android:text="@string/thanks" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
